<resources>
    <string name="app_name">Pegasus</string>
    <string name="expand_your_community">Expand Your Community</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered_click_here">Not Registered?Click here</string>
    <string name="already_registered_login">Already Registered?Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="pegasus">Pegasus</string>
    <string name="log_out">Log out</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">one</string>
    <string name="event_name">Event Name</string>
    <string name="type_of_event">Type of Event</string>
    <string name="date_of_event">Date of Event</string>
    <string name="time_of_event">Time of Event</string>
    <string name="choose_location">Choose Location</string>
    <string name="create_event">Create Event</string>
    <string name="mobile_no">Mobile No</string>
    <string name="sports_interested_in">Sports Interested In</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="name">Name</string>
    <string name="title_activity_maps">Map</string>
    <string name="personal_details">Personal Details</string>
    <string name="dob_dd_mm_yyyy">DOB(dd/mm/yyyy)</string>
    <string name="address">Address:</string>
    <string name="house_no">House No</string>
    <string name="street">Street</string>
    <string name="pin_code">Pin Code</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="complete_registration">Complete Registration</string>
    <string name="state">State</string>
    <string name="upper_age">Upper Age</string>
    <string name="lower_age">Lower Age</string>
    <string name="members_limit">Members Limit</string>
    <string name="name_of_event_cricket">Name of Event(Cricket)</string>
    <string name="name_of_event_ex_cricket">Name Of Event (Ex-:Cricket)</string>
    <string name="event_date">Event Date</string>
    <string name="choose_meeting_point_on_map">Choose Meeting Point On Map</string>
    <string name="are_you_going_to_participate">Are you Going to Participate?</string>
</resources>
